# INFORMS_FORD

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/datasets/: base.py  ford.py
benchmark/metrics/: __init__.py  classification.py  thresholding.py
benchmark/models/: __init__.py  base.py  isolation_forest.py
benchmark/models/gdn/: __init__.py  adapter.py
benchmark/reporting/: build_tables.py
benchmark/runners/: experiment.py
colab/: 01_ford_smoke_test.ipynb  02_gdn_benchmark.ipynb  run_benchmark.ipynb
configs/datasets/: ford.yaml
configs/experiments/: ford_gdn_smoke.yaml  ford_isolation_forest.yaml
configs/models/: gdn.yaml  isolation_forest.yaml
docs/: ford_preprocessing_notes.md
legacy/: data_preprocessing.py
registry/: datasets.yaml  models.yaml  papers.csv
results/: README.md  benchmark_results.csv  benchmark_results.xlsx
scripts/: build_results_table.py  run_experiment.py  update_benchmark_reports.py  validate_dataset.py
tests/: conftest.py  test_colab_notebook.py  test_experiment.py  test_ford_loader.py  test_gdn_adapter.py  test_gdn_notebook.py  test_isolation_forest.py  test_metrics.py  test_reporting.py  test_thresholding.py  test_update_benchmark_reports.py
